k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
spec:
  type: LoadBalancer
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
